# rustMcScan

./: Cargo.toml  README.md
data/: address_list.json
src/: main.rs
src/mod/: address_list.rs
