[package]
name = "rust_mc_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ipnet = "2.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
serde_derive = "1.0.117"
packet = "0.1.4"
bytes = "1.4.0"
mcping = "0.2.0"